force-app/main/objects/Course_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <description>Offer code</description>
        <inlineHelpText>Enter Course Offer Code</inlineHelpText>
        <label>Offer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Course Bookings</relationshipLabel>
        <relationshipName>Course_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Credit_Amount__c</fullName>
        <inlineHelpText>Value of credit if not for a booking cancellation</inlineHelpText>
        <label>Other Credit Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Credit_Date__c</fullName>
        <label>Other Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Credit_Notes__c</fullName>
        <label>Other Credit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Credit_Reason__c</fullName>
        <label>Other Credit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S04 - Client Order Error</fullName>
                </value>
                <value>
                    <fullName>S05 - SOE Operator Error</fullName>
                </value>
                <value>
                    <fullName>S07 - Client Cancelled Training</fullName>
                </value>
                <value>
                    <fullName>S08 - SHL Cancelled Course</fullName>
                </value>
                <value>
                    <fullName>S09 - Goodwill Gesture</fullName>
                </value>
                <value>
                    <fullName>S11 - System Error</fullName>
                </value>
                <value>
                    <fullName>S12 - Requestor Error</fullName>
                </value>
                <value>
                    <fullName>S13 – Client Support Operator Error</fullName>
                </value>
                <value>
                    <fullName>S14 – Training Operator Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Credit_SUN_Credit_Note_Number__c</fullName>
        <label>Other Credit SUN Credit Note Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Credit_Status__c</fullName>
        <label>Other Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be credited</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed via order</fullName>
                </value>
                <value>
                    <fullName>Ready for OAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Credit_Text_Description__c</fullName>
        <label>Other Credit Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pass_Status__c</fullName>
        <label>Pass Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Course_Deadline__c</fullName>
        <formula>Course_Number__r.Pre_Course_Deadline__c</formula>
        <label>Pre-Course Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Discount_Total__c</fullName>
        <label>Pre Discount Total</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit_Centre__c</fullName>
        <label>Profit Centre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France - FR1</fullName>
                </value>
                <value>
                    <fullName>Germany - DE1</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Ireland - IE1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>Philippines - PH1</fullName>
                </value>
                <value>
                    <fullName>Poland - PL1</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Spain - ES1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>Switzerland - CH1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
                <value>
                    <fullName>US - US1</fullName>
                </value>
                <value>
                    <fullName>US - US5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <description>Text to state why the booking was cancelled, can be used in credit and rebooking checks</description>
        <label>Reason For Cancellation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registration_No__c</fullName>
        <formula>Billing_Contact__r.Registration_Number__c</formula>
        <label>Registration No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_sent__c</fullName>
        <label>Reminder sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requires_Residence__c</fullName>
        <label>Residential Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Residential</fullName>
                    <default>true</default>
                    <label>Non-Residential</label>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residential_price__c</fullName>
        <description>Additional cost on top of the base course price for residence during the course</description>
        <label>Residential Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSC_Email__c</fullName>
        <label>SSC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SUN_Credit_Note_Number__c</fullName>
        <inlineHelpText>Must be entered for credit notes raised on cancelled bookings</inlineHelpText>
        <label>SUN Credit Note Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUN_Order_Number__c</fullName>
        <description>SUN Order Number for cross reference</description>
        <label>SUN Order Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Instructions_To__c</fullName>
        <label>Send Instructions To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booker</fullName>
                </value>
                <value>
                    <fullName>Delegate</fullName>
                    <default>true</default>
                    <label>Delegate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Language__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <formula>TEXT(Course_Number__r.Survey_Language__c)</formula>
        <label>Survey Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who took the course order</description>
        <label>Taker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N20000000pQatEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Calculation based on the Extra Night &amp; Require Residence flag values.</description>
        <formula>IF(ISPICKVAL(Requires_Residence__c, &quot;Residential&quot;),  Residential_price__c , Course_Price__c) + IF(ISPICKVAL(Extra_Night__c,&quot;Yes&quot;),Extra_night_price__c,0) - Course_Price_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prices are now fixed in Sun based on agreed price.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Email_Address__c</fullName>
        <label>Training Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Transferred_Booking__c</fullName>
        <label>Transferred Booking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upsell_Value__c</fullName>
        <label>Upsell Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Course Booking</label>
    <listViews>
        <fullName>ANZ_Delegate_Certificates</fullName>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_Number__c</columns>
        <columns>NAME</columns>
        <columns>Booking_Status__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Elearning__c</columns>
        <columns>Assessments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Booking_BU__c</field>
            <operation>equals</operation>
            <value>Australia,New Zealand</value>
        </filters>
        <filters>
            <field>Booking_Status__c</field>
            <operation>notContain</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Course_Description__c</field>
            <operation>notContain</operation>
            <value>system,workshop,CBI</value>
        </filters>
        <label>~ANZ Delegate Pre-Course Work</label>
        <language>en_US</language>
        <sharedTo>
            <group>ANZAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_Pre_Course_Tracking</fullName>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_Number__c</columns>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Elearning__c</columns>
        <columns>Contact_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Booking_BU__c</field>
            <operation>equals</operation>
            <value>Australia,New Zealand</value>
        </filters>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>Course_Description__c</field>
            <operation>notContain</operation>
            <value>system,workshop</value>
        </filters>
        <label>~ANZ Delegate Certificates</label>
        <language>en_US</language>
        <sharedTo>
            <group>ANZAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAmericasBookings</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Provisional</value>
        </filters>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Canada - CA1,US - US1,US - US5</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <filters>
            <field>Course_Description__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <label>All Americas Provisional Bookings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllBookingsspecificcompany</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billing_Account__c</field>
            <operation>startsWith</operation>
            <value>Sun Chemical</value>
        </filters>
        <label>All Bookings specific company</label>
    </listViews>
    <listViews>
        <fullName>AllHongKongBookings</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Booking_BU__c</field>
            <operation>startsWith</operation>
            <value>Hong</value>
        </filters>
        <label>All Hong Kong Bookings</label>
    </listViews>
    <listViews>
        <fullName>AllIndiaBookings</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Booking_BU__c</field>
            <operation>startsWith</operation>
            <value>India</value>
        </filters>
        <label>All India Bookings</label>
    </listViews>
    <listViews>
        <fullName>AllUKProvisionalBookings_d_2</fullName>
        <columns>Course_Description__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>UK - UK1</value>
        </filters>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Provisional</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Description__c</field>
            <operation>notContain</operation>
            <value>S2P,SODA,system,correspondence,marking</value>
        </filters>
        <filters>
            <field>Course_Venue__c</field>
            <operation>notContain</operation>
            <value>webinar,thames ditton</value>
        </filters>
        <label>All UK Provisional Bookings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUKandIrelandProvisionalBookings</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5</booleanFilter>
        <columns>Course_Name__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Delegate_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Booking_BU__c</field>
            <operation>equals</operation>
            <value>UK</value>
        </filters>
        <filters>
            <field>Course_Booking_BU__c</field>
            <operation>equals</operation>
            <value>Ireland</value>
        </filters>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Provisional</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>TC UK,SODA,TC APAC,S2P,MFS</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All UK and Ireland Provisional Bookings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_DE_CH_IT_Provisional_Bookings</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Germany - DE1,Italy - IT1,Switzerland - CH1</value>
        </filters>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Provisional</value>
        </filters>
        <filters>
            <field>Course_Venue__c</field>
            <operation>notEqual</operation>
            <value>Client Site</value>
        </filters>
        <label>All DE, CH, IT Provisional Bookings</label>
    </listViews>
    <listViews>
        <fullName>All_Global_Provisional_Bookings</fullName>
        <columns>Profit_Centre__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Provisional</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>notEqual</operation>
            <value>Canada - CA1,India - IN1</value>
        </filters>
        <filters>
            <field>Course_Venue__c</field>
            <operation>notContain</operation>
            <value>webinar,the pavilion</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notEqual</operation>
            <value>OPQAOC,OTAOC</value>
        </filters>
        <label>All Global Provisional Bookings</label>
    </listViews>
    <listViews>
        <fullName>All_Nordic_Provisional_Bookings</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Profit_Centre__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Provisional</value>
        </filters>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Denmark - DK1,Finland - FI1,Norway - NO1,Sweden - SE1</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <filters>
            <field>Course_Description__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <label>All Nordic Provisional Bookings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Nordic_Ready_To_Be_Confirmed_Booking</fullName>
        <columns>Course_Number__c</columns>
        <columns>Course_Name__c</columns>
        <columns>NAME</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Delegate_Account__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_Type__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Ready to be confirmed</value>
        </filters>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Denmark - DK1,Finland - FI1,Norway - NO1,Sweden - SE1</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Venue__c</field>
            <operation>notContain</operation>
            <value>Client site</value>
        </filters>
        <label>All Nordic Ready ToBe Confirmed Bookings</label>
    </listViews>
    <listViews>
        <fullName>All_SA_Provisional_Bookings1</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>NAME</columns>
        <columns>Booking_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>South Africa - ZA1</value>
        </filters>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Provisional</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Description__c</field>
            <operation>notContain</operation>
            <value>S2P,SODA,system</value>
        </filters>
        <filters>
            <field>Course_Venue__c</field>
            <operation>notContain</operation>
            <value>webinar,thames ditton</value>
        </filters>
        <label>All SA Provisional Bookings</label>
    </listViews>
    <listViews>
        <fullName>All_UK_Ready_ToBe_Confirmed_Bookings</fullName>
        <columns>Course_Number__c</columns>
        <columns>Course_Name__c</columns>
        <columns>NAME</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Delegate_Account__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_Type__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Ready to be confirmed</value>
        </filters>
        <filters>
            <field>Course_Venue__c</field>
            <operation>notContain</operation>
            <value>Client site</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Global Ready ToBe Confirmed Bookings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_WE_Provisional_Bookings</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Country__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Delegate_Contact__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>NAME</columns>
        <columns>Course_Number__c</columns>
        <columns>Booking_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Belgium - BE5,France - FR1,Netherlands - NL5</value>
        </filters>
        <filters>
            <field>Booking_Status__c</field>
            <operation>equals</operation>
            <value>Provisional</value>
        </filters>
        <filters>
            <field>Course_Venue__c</field>
            <operation>notEqual</operation>
            <value>Client site</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notEqual</operation>
            <value>Pre-Sales Webinar</value>
        </filters>
        <label>All BE/NL/FR Provisional Bookings</label>
    </listViews>
    <nameField>
        <displayFormat>CB{000000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BillingContactCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED( Invoice_Status__c ),
 ISPICKVAL(Invoice_Status__c, &apos;Ready for OAT&apos;),
  Billing_Contact__r.AccountId  &lt;&gt;  Billing_Account__r.Id,
NOT(ISPICKVAL(Billing_Contact__r.Contact_Status__c, &apos;Active&apos;)) 
)</errorConditionFormula>
        <errorDisplayField>Billing_Contact__c</errorDisplayField>
        <errorMessage>Selected Billing Contact is not part of Billing Account or the Billing Contact is inactive. Please select correct Billing Contact/Account to mark Invoice status as &apos;Ready for OAT&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Booking_Status_RestrictedTraining</fullName>
        <active>true</active>
        <description>Training profile can still set one of the status fields to Complete&apos; or &apos;Ready for invoicing/crediting&apos;.</description>
        <errorConditionFormula>AND(IF($Permission.Training,
	IF( 
	OR(
		IF(
			ISCHANGED(Invoice_Status__c),
			IF(
				OR(
					ISPICKVAL(Invoice_Status__c, &apos;Ready for OAT&apos;),
					ISPICKVAL(Invoice_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Invoice_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Invoice_Status__c, &apos;Unit Transfer&apos;)
				),false,true
			),false
		),
		IF(
			ISCHANGED(Credit_Status__c),
			IF(
				OR(
					ISPICKVAL(Credit_Status__c, &apos;Ready for OAT&apos;),
					ISPICKVAL(Credit_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Credit_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Credit_Status__c, &apos;Unit Transfer&apos;)
				),false,true
			),false
		),
		IF(
			ISCHANGED(Other_Credit_Status__c),
			IF(
				OR(
					ISPICKVAL(Other_Credit_Status__c, &apos;Ready for OAT&apos;),
					ISPICKVAL(Other_Credit_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Other_Credit_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Other_Credit_Status__c, &apos;Unit Transfer&apos;)
				),false,true
			),false
		)
	),true,
	false),
	false
),NOT(IsAutomationBypassed__c))</errorConditionFormula>
        <errorMessage>You can not set Invoice Status or Credit Status or Other Credit Status to Complete&apos; or &apos;Ready for invoicing/crediting&apos;.</errorMessage>
    </validationRules>
</CustomObject>